<resources>
    <string name="app_name">CaretaPaciente</string>


    <string name="boton_comenzar">Comenzar</string>
    <string name="boton_registrarme">Registrarme</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="botom_tomar_signos">Tomar datos vitales</string>
    <string name="boton_actualizar_datos">Actualizar datos</string>
    <string name="boton_prueba">Prueba</string>

    <!--texto pantlla 2-->
    <string name="texto_corazon">Monitorear tu estado de salud según tus sintomas.</string>
    <string name="texto_estetoscopio">Ayudar a todos los profesionales que trabajan por tu salud.</string>
    <string name="texto_base">Generar un registro de tu estado de salud.</string>

    <!--tituo pantalla 1-->
    <string name="titulo1">Sistema de monitoreo</string>
    <string name="subtitulo1">Gracias por ayudar a México</string>
    <string name="subtitulo2">Con esta App podrás:</string>
    <string name="subtitulo3">Aplicación para medir los signos vitales de los pacientes</string>


    <!--titulo pantalla 2-->
    <string name="titulo2">Prueba de salud</string>
    <string name="subtitulo4">#QuedateEnCasa</string>


    <string name="subsubtitulo1">Datos personales</string>
    <string name="subsubtitulo2">Domicilio</string>

    <!-- titulo pantalla 3 -->
    <string name="titulo3">Por ti, por México</string>

    <string name="subtitulo5">Queremos conocer tu estado de salud</string>

    <!-- titulo pantalla 4 -->
    <string name="titulo4">Instrucciones de usos</string>

    <!--descripciones-->
    <string name="descripcion_registro">Registrate con tu número teléfonico y correo electrónico,
        nos ayudaras a poder entender mejor tu estado medico y el desarrollo del COVID-19 en México,
        también podríamos contactarte de forma directa en el caso de que necesiten ayuda.</string>
    <string name="descripcion_registro_datos">Para comenzar ingresa los siguientes datos.</string>
    <string name="descripcion_registro_sintomas">¿El día de hoy usted presenta alguno de los siguientes síntomas?</string>
    <string name="descripcion_historial_clinico">¿Usted esta o estuvo diagnosticado con alguna de estas enfermedades?</string>
    <string name="descripcion_medir_salud">Realizaremos un estudio sobre tu estado de salud y con ello se le informará a tu médico para que tome la mejor decisión.</string>
    <string name="descripcion_lista_medir">1.-Asegúrese que su teléfono este conectado a internet.\n\n
2.-Encienda su conexión Bluetooth\n\n
3.-Accione el switch en la careta.\n\n
4.-Conecte su careta a su teléfono vía Bluetooth.\n\n
5.-Coloca el dedal en el dedo índice.\n\n
6.-Coloca la máscara en tu cara como se muestra en la imagen.</string>

    <!--Dato del gormulatio-->
    <string name="dato_nombre">Nombre completo</string>
    <string name="dato_edad">Edad</string>
    <string name="dato_telefono">Telefono</string>
    <string name="dato_peso">Peso</string>
    <string name="dato_altura">Altura</string>
    <string name="dato_fecha_inicio">Fecha de registro</string>
    <string name="dato_calle">Calle y número</string>
    <string name="dato_correo">Correo</string>
    <string name="dato_contrasena">Contraseña</string>
    <string name="dato_cp">C.P.</string>
    <string name="dato_colonia">Colonia</string>


    <!-- sintomologia -->


    <string name="dato_cefalea">Cefalea (dolor de cabeza intenso) </string>
    <string name="dato_tos">Tos</string>
    <string name="dato_dolor_toracito">Dolor torácito</string>
    <string name="dato_dolor_abdominal">Dolor abdominal</string>
    <string name="dato_vomito">Vómito</string>
    <string name="dato_irritabilidad">Irritabilidad</string>
    <string name="dato_perdida_olfato_gusto">Pérdida de olfato y/o gusto</string>
    <string name="dato_diarrea">Diarrea</string>
    <string name="dato_odinofagia">Odinofagia (dificultad para ingerir alimentos)</string>
    <string name="dato_rinorrea">Rinorrea (secreción nasal)</string>
    <string name="dato_mialgias">Mialgias (dolor muscular)</string>


    <!--historia clinico-->
    <string name="dato_diabetes">Diabetes</string>
    <string name="dato_obesidad">Obesidad  (a través de IMC)</string>
    <string name="dato_cancer">Cáncer</string>
    <string name="dato_asma">Asma</string>
    <string name="dato_vih">VIH</string>
    <string name="dato_has">HAS (Hipertensión arterial sistémica)</string>
    <string name="dato_epoc">EPOC (Enfermedad pulmonar obstructiva crónica)</string>
    <string name="dato_embarazo">Embarazo</string>
    <string name="dato_artritis">Artritis</string>
    <string name="dato_enfermedad_autoinmune">Enfermedad Autoinmune</string>
    <string name="title_activity_medicion">Medicion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="id_paciente">ID del paciente</string>
    <string name="id_careta">ID de la careta</string>

    <!-- Strings related to login -->
    <string name="prompt_user_id">Id usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_user_id">El id proporcionado es inválido</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_incorrect_user_id">Número de identificación no registrado</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="error_invalid_password">Contraseña inválida</string>
</resources>