<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo2"
    android:orientation="vertical"
    tools:context=".Registro">


    <LinearLayout
        android:id="@+id/linearLayoutFilaUno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fondo1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

        <TextView
            android:id="@+id/titulo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:paddingTop="10sp"
            android:shadowColor="#000000"
            android:text="@string/titulo2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fondo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/subtitulo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
        android:paddingTop="10sp"
        android:text="@string/subtitulo4"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutFilaDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/descripcionRegistroDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="0"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:text="@string/descripcion_registro_sintomas"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaTres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="3.5"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/datoDiabetes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_cefalea" />

        <CheckBox
            android:id="@+id/datoObesidad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_tos" />

        <CheckBox
            android:id="@+id/datoCancer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_dolor_abdominal" />

        <CheckBox
            android:id="@+id/datoAsma"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_dolor_abdominal" />

        <CheckBox
            android:id="@+id/datoVIH"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_vomito" />

        <CheckBox
            android:id="@+id/datoHAS"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_irritabilidad" />

        <CheckBox
            android:id="@+id/datoEPOC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_perdida_olfato_gusto" />

        <CheckBox
            android:id="@+id/datoEmbarazo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_diarrea" />

        <CheckBox
            android:id="@+id/datoArtritis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_odinofagia" />

        <CheckBox
            android:id="@+id/datoEnfermedadAutoinmune"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_rinorrea" />

        <CheckBox
            android:id="@+id/datoMialgias"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dato_mialgias" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutFilaCinco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fondo7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

        <Button
            android:id="@+id/botonRegistrarme2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="2"
            android:onClick="onClick2"
            android:background="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/boton_aceptar"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/fondo8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            app:srcCompat="@drawable/fondo_2" />


    </LinearLayout>


</LinearLayout>