<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo2"
    android:orientation="vertical"
    tools:context=".Registro">


    <LinearLayout
        android:id="@+id/linearLayoutFilaUno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fondo1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

        <TextView
            android:id="@+id/titulo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:paddingTop="10sp"
            android:shadowColor="#000000"
            android:text="@string/titulo2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fondo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/subtitulo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
        android:paddingTop="10sp"
        android:text="@string/subtitulo4"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutFilaDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/descripcionRegistroDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_weight="0"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:text="@string/descripcion_registro_datos"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaTres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="3.5"
        android:orientation="vertical">


        <TextView
            android:id="@+id/subsubtitulo1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/subsubtitulo1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:hint="@string/dato_nombre"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFilaTresUno"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="2"
                android:hint="@string/dato_edad"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_timelapse_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoEdad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:hint="@string/dato_telefono"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_contact_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoTelefono"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFilaTresDos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="2"
                android:hint="@string/dato_peso"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_accessibility_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoPeso"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="2"
                android:hint="@string/dato_altura"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_height_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoAltura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:hint="@string/dato_fecha_inicio"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoFechainicio"
                android:layout_width="match_parent"
                android:inputType="date"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>






    <LinearLayout
        android:id="@+id/linearLayoutFilaCuatro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/subsubtitulo2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/subsubtitulo2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:hint="@string/dato_calle"
            app:startIconDrawable="@drawable/ic_baseline_streetview_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoCalleNumero"
                android:inputType="textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFilaCuatroUno"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="2"
                android:hint="@string/dato_cp"
                app:helperTextEnabled="true">
                <!--app:startIconDrawable="@drawable/ic_baseline_timelapse_24"-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoCP"
                    android:inputType="textPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:hint="@string/dato_colonia"
                app:helperTextEnabled="true">
               <!-- app:startIconDrawable="@drawable/ic_baseline_contact_phone_24"-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoColonia"
                    android:inputType="textAutoCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayoutFilaCinco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fondo7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

        <Button
            android:id="@+id/botonSiguiente1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="2"
            android:onClick="onClick"
            android:background="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/boton_siguiente"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/fondo8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            app:srcCompat="@drawable/fondo_2" />


    </LinearLayout>


</LinearLayout>