<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo2"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutFilaUno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fondo1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

        <TextView
            android:id="@+id/titulo1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:paddingTop="10sp"
            android:shadowColor="#000000"
            android:text="@string/titulo1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fondo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/subtitulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo1"
        android:textSize="20sp"
        android:gravity="clip_horizontal|center|center_horizontal|center_vertical"/>

    <TextView
        android:id="@+id/subtitulo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
        android:paddingTop="10sp"
        android:text="@string/subtitulo2"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutFilaDos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iconoCorazon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/corazon" />

        <TextView
            android:id="@+id/descripcionRegistro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:text="@string/texto_corazon"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaTres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iconoLlamar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/estetoscopio" />

        <TextView
            android:id="@+id/textoEstetoscopio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:text="@string/texto_estetoscopio"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaCuatro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iconoBase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/base" />

        <TextView
            android:id="@+id/textoBase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="clip_horizontal|center|center_horizontal|center_vertical"
            android:text="@string/texto_base"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFilaCinco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/linearLayoutFilaSeis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fondo7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/fondo_2" />

        <Button
            android:id="@+id/botonRegistrarme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="@string/boton_comenzar"
            android:textColor="@color/colorAccent"
            android:onClick="onClick"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/fondo8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            app:srcCompat="@drawable/fondo_2" />


    </LinearLayout>

</LinearLayout>